--- a/plugins/dev9null/Windows/DEV9null.vcxproj
+++ b/plugins/dev9null/Windows/DEV9null.vcxproj
@@ -20,6 +20,7 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{04439C5F-05FB-4A9C-AAD1-5388C25377DB}</ProjectGuid>
+    <WindowsTargetPlatformVersion>10.0.19041.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Label="Configuration">
