--- a/.gitignore
+++ b/.gitignore
@@ -108,3 +108,7 @@ oprofile_data/
 
 /pcsx2/windows/VCprojects/GSdx_opengl_debug_hw.txt
 /pcsx2/windows/VCprojects/GSdx_opengl_debug_sw.txt
+/bin/.trex
+*.dxvk-cache
+/bin/imgui.ini
+/bin/metrics.txt
