remove git tag version from appveyor.yml

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -26,10 +26,8 @@ build_script:
   - msbuild buildbot.xml /m /t:%target% /logger:"C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll"
 
 after_build:
-  - ps: $env:gitrev = git describe --tags
-  - ps: $env:my_version = "$env:gitrev-$env:appveyor_build_number"
   - type NUL > bin\portable.ini
-  - set folder_name=pcsx2-%my_version%-%visualstudio_string%-%platform%-%target%
+  - set folder_name=pcsx2-%build%-%visualstudio_string%-%platform%-%target%
   - rename bin %folder_name%
   - 7z a -mx9 %folder_name%.7z %folder_name%
 
