--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 [submodule "3rdparty/xz/xz"]
 	path = 3rdparty/xz/xz
 	url = https://github.com/PCSX2/xz.git
+[submodule "dxvk-remix"]
+	path = dxvk-remix
+	url = https://github.com/NVIDIAGameWorks/dxvk-remix
+[submodule "bridge-remix"]
+	path = bridge-remix
+	url = https://github.com/NVIDIAGameWorks/bridge-remix
